# difftastic-diff

./: Cargo.toml
.github/workflows/: test.yml
src/: changes.rs  lib.rs  myers_diff.rs  syntax.rs  tree_sitter_parser.rs
