[package]
name = "difftastic-diff"
description = "A diff library for ASTs"
repository = "https://github.com/wilfred/difftastic-diff"
license = "MIT"
version = "0.1.0"
authors = ["Wilfred Hughes <me@wilfred.me.uk>"]
keywords = ["diff", "syntax"]
edition = "2021"
# Goal: support at least 12 months of Rust versions, and also the Rust
# version on Debian stable (see https://tracker.debian.org/pkg/rustc,
# currently 1.63).
#
# Unfortunately tree-sitter 0.20.10 has an MSRV[1] of 1.65, and it has
# a bugfix[2] we want.
#
# 1: https://github.com/tree-sitter/tree-sitter/issues/2669
# 2: https://github.com/Wilfred/difftastic/issues/570
rust-version = "1.65.0"

[dependencies]
hashbrown = "0.14.3"
rustc-hash = "1.1.0"
